# odineye

./: Cargo.toml  README.md
src/: main.rs
src/resources/: index.html
