[package]
name = "odineye"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
image = "0.25.6"
objc2-core-foundation = "0.3.0"
open = "5.3.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sysinfo = "0.34.1"
tao = "0.32.8"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
tray-icon = "0.20.0"
